# ComfyUI_M3Net

./: README.md  multistage_fusion.py  nodes.py  pyproject.toml
ComfyUI_M3Net/: M3Net.py  multilevel_interaction.py
ComfyUI_M3Net/data/: custom_transforms.py  dataloader.py
ComfyUI_M3Net/models/: modules.py  resnet.py
models/: EfficientNet.py  swin.py  t2t_vit.py
